--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "AdrianVondy",
+  "homepage": "https://socketwiz.github.io/adianvondy",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "gh-pages": "^1.0.0",
     "hapi": "^16.5.2",
     "inert": "^4.2.1",
     "react": "^15.6.1",
@@ -18,7 +20,9 @@
   },
   "scripts": {
     "build": "react-scripts build",
++   "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "server": "node server",
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom"
