Added the rest of the pages

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AdrianVondy",
+  "name": "Adrian & Vondy Law Firm in Winchester, Virginia",
   "icons": [
     {
       "src": "favicon.ico",
