updating package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AdrianVondy",
-  "homepage": "https://socketwiz.github.io/adrianvondy",
+  "homepage": "http://adrianvondy.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
