--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "AdrianVondy",
-  "homepage": "http://adrianvondy.com",
+  "homepage": "https://www.adrianvondy.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
