--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "gh-pages": "^1.0.0",
-    "react": "^15.6.1",
-    "react-dnd": "^2.4.0",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.10",
-    "redux": "^3.7.2",
-    "redux-devtools": "^3.4.0"
+    "gh-pages": "^2.0.1",
+    "react": "^16.8.6",
+    "react-dnd": "^9.3.2",
+    "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0"
   },
   "scripts": {
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
+    "postupdates": "npm install",
     "predeploy": "npm run build",
     "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom"
+    "test": "react-scripts test --env=jsdom",
+    "updates": "ncu -u"
+  },
+  "devDependencies": {
+    "npm-check-updates": "^3.1.18"
   }
 }
