--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
   },
   "devDependencies": {
     "npm-check-updates": "^3.1.18"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
