--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "private": true,
   "dependencies": {
     "gh-pages": "^3.1.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dnd": "^11.1.3",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-devtools": "^3.7.0"
   },
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
+    "lint": "eslint src",
     "postupdates": "npm install",
     "predeploy": "npm run build",
     "start": "react-scripts start",
@@ -25,7 +26,7 @@
     "updates": "ncu -u"
   },
   "devDependencies": {
-    "npm-check-updates": "^9.0.4"
+    "npm-check-updates": "^11.0.2"
   },
   "browserslist": {
     "production": [
