--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,19 @@
-on: push
 name: Build and deploy on push
+
+on: push
+
+permissions:
+  contents: write
+
 jobs:
   build:
-    name: shalzz/zola-deploy-action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: shalzz/zola-deploy-action
-      uses: shalzz/zola-deploy-action@master
-      env:
-        PAGES_BRANCH: gh-pages
-        BUILD_DIR: .
-        BUILD_FLAGS: --drafts
-        TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Deploy with shalzz/zola-deploy-action
+        uses: shalzz/zola-deploy-action@master
+        env:
+          PAGES_BRANCH: gh-pages
+          BUILD_DIR: .
+          BUILD_FLAGS: --drafts
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
